<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fuel</string>
    <string name="placeholder">placeholder</string>
    <string name="app_welcome">Witaj w CheapFuel</string>
    <string name="todo">TODO</string>
    <string name="email_address" tools:ignore="Typos">Adres e-mail</string>
    <string name="password">Hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="register">Zarejestruj się</string>
    <string name="loginWithFacebook">Zaloguj się kontem Facebook</string>
    <string name="loginWithGoogle">Zaloguj się kontem Google</string>
    <string name="set_password">Utwórz hasło</string>
    <string name="next_page">Dalej</string>
    <string name="finish">Zakończ</string>
    <string name="password_requirements_header">Hasło musi zawierać: </string>
    <string name="password_requirements_1">Minimum 8 znaków </string>
    <string name="password_requirements_2">Jedną dużą literę </string>
    <string name="password_requirements_3">Jedną cyfrę</string>
    <string name="username_hint">Nazwa użytkownika</string>
    <string name="input_username">Podaj nazwę użytkownika: </string>
    <string name="input_password">Podaj hasło:</string>
    <string name="accept_terms_of_use"><a href="https://google.com">Akceptuje warunki regulaminu</a></string>
    <string name="ask_to_enable_gps">Aby kontynuować włącz lokalilzację urządzenia.</string>
    <string name="no_thanks">Nie, dziękuję</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fuelStations">Stacje paliw</string>
    <string name="search_title">Szukaj</string>
    <string name="map_filter">Filtruj</string>
    <string name="from_you">%1$s od ciebie</string>
    <string name="never">Nigdy</string>
    <string name="one_year_ago">Rok temu</string>
    <string name="years_ago">%1$s lat temu</string>
    <string name="one_month_ago">Miesiąc temu</string>
    <string name="months_ago">%1$s miesięcy temu</string>
    <string name="less_then_hour_ago">Mniej niż godzinę temu</string>
    <string name="one_hour_ago">Godzinę temu</string>
    <string name="hours_ago">%1$s godzin temu</string>
    <string name="one_day_ago">1 dzień temu</string>
    <string name="days_ago">%1$s dni temu</string>
    <string name="zloty">%1$s zł</string>
    <string name="edited">Edytowany %1$s</string>
    <string name="fuel_price_uppercase">CENY PALIW</string>
    <string name="services_uppercase">USŁUGI</string>
    <string name="comments_uppercase">KOMENTARZE</string>
    <string name="rate">Oceń</string>
    <string name="publish">Opublikuj</string>
    <string name="published">Opublikowano</string>
    <string name="edited_review">Edytowano</string>
    <string name="added">Dodano</string>
    <string name="deleted">Usunięto</string>
    <string name="ask_if_delete">Czy na pewno chcesz usunąć swoją opinię?</string>
    <string name="ask_if_delete_diff_user_review">Czy na pewno chcesz usunąć opinię użytkownika %1$s?</string>
    <string name="ask_if_report_user">Czy na pewno chcesz zgłosić komentarz użytkownika %1$s?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="report">Zgłoś</string>
    <string name="an_error_occurred">Wystąpił błąd</string>
    <string name="express_your_opinion">Wyraź swoją opinię</string>
    <string name="added_to_favourite">Dodano do ulubionych</string>
    <string name="removed_from_favourite">Usunięto z ulubionych</string>
    <string name="fuel_type">Typ paliwa</string>
    <string name="fuel_station_services">Usługi</string>
    <string name="fuel_stations">Stacje paliw</string>
    <string name="price_range">Przedział ceny</string>
    <string name="login">Zaloguj się</string>
    <string name="please_input_username_and_password">Podaj nazwę użytkownika oraz hasło:</string>
    <string name="fuel_station_ask_if_delete">Czy na pewno chcesz usunąć tą stację paliw?</string>
    <string name="favourite_ask_if_delete">Czy na pewno chcesz usunąć tą stację paliw ze swoich ulubionych?</string>
    <string name="sort">Sortuj</string>
    <string name="choose_sort">Wybierz sortowanie</string>
    <string name="max_distance">Maksymalna odległość</string>
    <string name="could_not_fount_any_stations">Nie udało się znaleźć żadnych stacji</string>
    <string name="none_fuel_station_has_been_added_to_favourite">Nie dodano żadnych stacji do ulubionych</string>
    <string name="details">Szczegóły</string>
    <string name="show_on_map">Pokaż na mapie</string>
    <string name="not_found_any_users">Nie znaleziono żadnych użytkowników</string>
    <string name="ban_user">Zablokuj</string>
    <string name="roles">Role</string>
    <string name="status">Status</string>
    <string name="cancel">Anuluj</string>
    <string name="forgot_password">Zapomniałeś hasła?</string>
    <string name="reset_password">\u00A0Zresetuj je</string>
    <string name="reset_password_2">Zresetuj hasło</string>
    <string name="input_email">Podaj adres e-mail:</string>
    <string name="input_code">Podaj kod</string>
    <string name="input_reset_code">Wprowadź kod wysłany w wiadomości na Twój adres e-mail:</string>
    <string name="input_new_password">Wprowadź oraz potwierdź nowe hasło:</string>
    <string name="account_status">Status:</string>
    <string name="account_created_at">Data utworzenia:</string>
    <string name="email">Email</string>
    <string name="email_address_confirmed">Potwierdzono adres email</string>
    <string name="role">Rola</string>
    <string name="ask_if_delete_review">Czy na pewno chcesz usunąć tą recenzję?</string>
    <string name="more">Więcej</string>
    <string name="search">Wyszukaj</string>
    <string name="latitude_error">Wartość musi być w przedziale -90 i 90</string>
    <string name="longitude_error">Wartość musi być w przedziale -180 i 180</string>
    <string name="value_must_be_greater_or_equal_to_0_eror">Wartość musi być większa albo równa 0</string>
    <string name="amount_of_fuel_to_buy">Ilość paliwa do kupienia</string>
    <string name="combustion">Spalanie</string>
    <string name="additional_data">DODATKOWE DANE</string>
    <string name="choose_location">Wybierz lokalizację</string>
    <string name="your_location">Twoja lokalizacja</string>
    <string name="longitude">Długość geograficzna</string>
    <string name="latitude">Szrokość geograficzna</string>
    <string name="your_location_uppercase">TWOJA LOKALIZACJA</string>
    <string name="reported">Zgłoszono</string>
    <string name="ban_reason">Podaj powód</string>
    <string name="block">Zablokuj</string>
    <string name="blocked">Zablokowano</string>
    <string name="name">Nazwa</string>
    <string name="city">Miasto</string>
    <string name="street">Ulica</string>
    <string name="street_number">Numer</string>
    <string name="postal_code">Kod pocztowy</string>
    <string name="add">Dodaj</string>
    <string name="ask_if_deactivate_user">Jesteś pewnien że chcesz dezaktywować tego użytkownika?</string>
    <string name="deactivated">Dezaktywowano</string>
    <string name="change_password">Zmień hasło</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="reset">Resetuj</string>
    <string name="password_changed">Hasło zmiennione</string>
    <string name="map">Mapa</string>
    <string name="station_list">Lista stacji</string>
    <string name="favourite_stations">Ulubione</string>
    <string name="input_incorrect_username_or_password">Podano nieprawidłową nazwę użytkownika lub hasło</string>
</resources>