<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SetRegisterMethodFragment"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_welcome"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/rl_setRegisterMethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_emailValidationError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="40dp"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/rl_setRegisterMethod" />

    <RelativeLayout
        android:id="@+id/rl_setRegisterMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint=" "
            android:layout_marginBottom="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:autofillHints="emailAddress"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/til_email"
            android:layout_alignEnd="@+id/til_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/light_red"
            android:padding="10dp"
            android:text="@string/register"
            app:cornerRadius="10dp"
            android:textAllCaps="false"
            android:textColor="@color/light_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_loginWithFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/til_email"
            android:layout_alignEnd="@+id/til_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/facebook"
            android:padding="10dp"
            app:cornerRadius="10dp"
            android:text="@string/loginWithFacebook"
            android:textAllCaps="false"
            android:textColor="@color/light_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginWithGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/til_email"
            android:layout_alignEnd="@+id/til_email"
            app:cornerRadius="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="145dp"
            android:backgroundTint="@color/google"
            android:padding="10dp"
            android:text="@string/loginWithGoogle"
            android:textAllCaps="false"
            android:textColor="@color/light_gray" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>